2006-10-31 Applied axes3d patch 1587359
           http://sourceforge.net/tracker/index.php?func=detail&aid=1587359&group_id=80706&atid=560722
           JDH

===============================================================
2006-10-26 Released 0.87.7 at revision 2835

2006-10-25 Made "tiny" kwarg in Locator.nonsingular much smaller - EF

2006-10-17 Closed sf bug 1562496 update line props dash/solid/cap/join
           styles - JDH

2006-10-17 Complete overhaul of the annotations API and example code -
           See matplotlib.text.Annotation and
           examples/annotation_demo.py JDH

2006-10-12 Committed Manuel Metz's StarPolygon code and
           examples/scatter_star_poly.py - JDH


2006-10-11 commented out all default values in matplotlibrc.template
           Default values should generally be taken from defaultParam in
           __init__.py - the file matplotlib should only contain those values
           that the user wants to explicitly change from the default.
           (see thread "marker color handling" on matplotlib-devel)

2006-10-10 Changed default comment character for load to '#' - JDH

2006-10-10 deactivated rcfile-configurability of markerfacecolor
           and markeredgecolor. Both are now hardcoded to the special value
	   'auto' to follow the line color. Configurability at run-time
	   (using function arguments) remains functional. - NN

2006-10-07 introduced dummy argument magnification=1.0 to
           FigImage.make_image to satisfy unit test figimage_demo.py
           The argument is not yet handled correctly, which should only
	   show up when using non-standard DPI settings in PS backend,
	   introduced by patch #1562394. - NN

2006-10-06 add backend-agnostic example: simple3d.py - NN

2006-09-29 fix line-breaking for SVG-inline images (purely cosmetic) - NN

2006-09-29 reworked set_linestyle and set_marker
	   markeredgecolor and markerfacecolor now default to
	   a special value "auto" that keeps the color in sync with