@@ -1020,7 +1020,7 @@ def subplot(*args, **kwargs):
     byebye = []
     for other in fig.axes:
         if other==a: continue
-        if bbox.overlaps(other.bbox):
+        if bbox.overlaps(other.bbox, ignoreend=True):
             byebye.append(other)
     for ax in byebye: delaxes(ax)
 
