@@ -1,3 +1,7 @@
+2006-11-02 Fixed a pylab subplot bug that was causing axes to be
+           deleted with hspace or wspace equals zero in
+           subplots_adjust - JDH
+
 2006-10-31 Applied axes3d patch 1587359
            http://sourceforge.net/tracker/index.php?func=detail&aid=1587359&group_id=80706&atid=560722
            JDH
